# rules_sycl

./: BUILD.bazel  MODULE.bazel  README.md  run.sh
example/: BUILD.bazel  example.cpp
main/: BUILD.bazel  data.txt  foo.sh  main.cpp
sycl/: BUILD.toolchains.tpl  BUILD.tpl  common.bzl  extensions.bzl  repositories.bzl  sycl_configure.bzl  sycl_toolchain_config.bzl
sycl/sycl/: BUILD.tpl
tests/: BUILD.bazel
