CORE_FLAGS = [
    "-fsycl",
]

CPU_FLAGS = [
    "-fsycl-targets=spir64",
]

CUDA_FLAGS = [
    "-fsycl-targets=nvptx64-nvidia-cuda",
]

CPU_AND_CUDA_FLAGS = [
    "-fsycl-targets=spir64,nvptx64-nvidia-cuda",
]

cc_binary(
    name = "cpu",
    srcs = ["example.cpp"],
    cxxopts = CORE_FLAGS + CPU_FLAGS,
    linkopts = CORE_FLAGS + CPU_FLAGS,
    deps = [
        "@local_config_sycl//sycl",
    ],
)

cc_binary(
    name = "cuda",
    srcs = ["example.cpp"],
    cxxopts = CORE_FLAGS + CUDA_FLAGS,
    linkopts = CORE_FLAGS + CUDA_FLAGS + ["--offload-arch=sm_80"],
    deps = ["@local_config_sycl//sycl"],
)

cc_binary(
    name = "cpu_or_cuda",
    srcs = ["example.cpp"],
    cxxopts = CORE_FLAGS + CPU_AND_CUDA_FLAGS,
    linkopts = CORE_FLAGS + CPU_AND_CUDA_FLAGS + ["--offload-arch=sm_80"],
    deps = ["@local_config_sycl//sycl"],
)
